Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18816

Assertion `sel->quick' failed in JOIN::make_range_rowid_filters

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4(EOL)
    • 10.4.4
    • Optimizer
    • None

    Description

      Reproducible on 10.4 with MyISAM, not with Innodb.

      create table t1 (pk int not null primary key, c2 varchar(10) , i1 int,key (c2)) engine=myisam;
      insert into t1 values  (1,'a',-5),(2,'a',null);
       
      create table t2 ( pk int, i1 int, c1 varchar(30) , key c1 (c1(30)), key i1 (i1)) engine=myisam;
      insert into t2 values (1,-5,'a'),(2,null,'a'),(3,null,'a'),(4,null,'a'),(5,5,'a'),(6,null,'a'),(7,4,'a'),(8,55,'a'),(9,null,'a'),(10,null,'a'),(11,null,'a'),(12,-5,'a'),(13,-5,'a'),(14,null,'a'),(15,null,'a'),(16,-5,'a'),(17,-5,'a');
       
      select 1 from t1 left join t2  join t1 as t1_a on t2.i1 = t1_a.pk on t1.c2 = t2.c1
      where t1_a.pk is null and t1_a.i1 != 3;
      

      10.4 1bcb66c597b79ed61a945661

      mysqld: /10.4/sql/sql_select.cc:1613: bool JOIN::make_range_rowid_filters(): Assertion `sel->quick' failed.
      190304 18:38:41 [ERROR] mysqld got signal 6 ;
       
      stdlib/abort.c:91(__GI_abort)[0x7f0ddcce9bd7]
      assert/assert.c:92(__assert_fail_base)[0x7f0ddcce9c82]
      /10.4/sql/mysqld(_ZN4JOIN24make_range_rowid_filtersEv+0x5c0)[0x556df268013e]
      /10.4/sql/mysqld(_ZN4JOIN15optimize_stage2Ev+0x1a9)[0x556df2685f3d]
      /10.4/sql/mysqld(_ZN4JOIN14optimize_innerEv+0x4c5a)[0x556df2685b20]
      sql/sql_select.cc:1615(JOIN::make_range_rowid_filters())[0x556df267fa79]
      sql/sql_select.cc:2217(JOIN::optimize_stage2())[0x556df269caf1]
      sql/sql_select.cc:2193(JOIN::optimize_inner())[0x556df2673c0a]
      sql/sql_select.cc:1551(JOIN::optimize())[0x556df25f869d]
      sql/sql_select.cc:4564(mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x556df25e544f]
      sql/sql_select.cc:424(handle_select(THD*, LEX*, select_result*, unsigned long))[0x556df2600b7b]
      sql/sql_parse.cc:6604(execute_sqlcom_select(THD*, TABLE_LIST*))[0x556df25d9628]
      sql/sql_parse.cc:3841(mysql_execute_command(THD*))[0x556df25d6523]
      sql/sql_parse.cc:8157(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x556df294a792]
      sql/sql_parse.cc:1831(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x556df294a15c]
      sql/sql_parse.cc:1358(do_command(THD*))[0x556df3d041e5]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7f0dddb326ba]
      /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d)[0x7f0ddcdc341d]
      

      Attachments

        Activity

          People

            igor Igor Babaev (Inactive)
            alice Alice Sherepa
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.