MDEV-18816 Assertion `sel->quick' failed in JOIN::make_range_rowid_filters

Do not build range filters with detected impossible WHERE.
Anyway conditions cannot be used anymore to extract ranges for filters.